// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test-flow flow 1`] = `
Array [
  Object {
    "_id": "ObjectID",
    "items": Array [],
    "table": 10,
  },
  Object {
    "_fake": true,
    "_id": "ObjectID",
    "items": Array [],
    "table": 9,
  },
]
`;

exports[`test-flow flow 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "items": Array [],
    "table": 10,
  },
  Object {
    "_id": "ObjectID",
    "items": Array [],
    "table": 9,
  },
]
`;
